-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.3.2, 6.4.3, 6.5.0, dev
-
None
-
Windows 10
-
-
58780ee99 (dev), 8ec56962b (6.5)
Quick TextEdit with RTL text placed into a ColumnLayout has wrong alignment.
Curious that this is platform-dependent, as it's not reproduced for me on macOS
Sample code:
import QtQuick import QtQuick.Window import QtQuick.Layouts Window { visible: true component HebrewText: TextEdit { readOnly: true text: 'שדגשגשגשגדוגמא בעיות יישור טֶקסט' Rectangle { anchors.fill: parent color: 'red' opacity: 0.2 border.width: 1 } } ColumnLayout { id: layout HebrewText { } } HebrewText { anchors { top: layout.bottom topMargin: 20 } } }
Actual result: text in the layout is aligned to the left
Expected result: text in the layout is aligned to the right, so it should look as the same text outside the layout
- relates to
-
QTBUG-113568 QTextDocument: calling setTextWidth(-1) breaks RTL text alignment
-
- Reported
-