tests/auto/quick/qquicktextedit/data/qtbug-112858.qml
@@ -1,0 +1,12 @@
+import QtQuick
+import QtQuick.Layouts
+
+ColumnLayout {
+    id: layout
+    TextEdit {
+    readOnly: true
+    text: 'שדגשגשגשגדוגמא
+בעיות יישור
+טֶקסט'
+    }
+}
